--- a/Weather App/.gitignore
+++ b/Weather App/.gitignore
@@ -1,3 +1,23 @@
+# Dependencies
+node_modules
+.pnp
+.pnp.js
+
+# Production
+dist
+dist-ssr
+build
+
+# Testing
+coverage
+
+# Environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 # Logs
 logs
 *.log
@@ -7,14 +27,10 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
-
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
+!.vscode/settings.json
 .idea
 .DS_Store
 *.suo
@@ -22,3 +38,11 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Misc
+.cache
+.temp
+*.local
+
+# TypeScript
+*.tsbuildinfo
